Refactor App component and add Box component
This commit refactors the App component in App.jsx to include a new Box component. The Box component is imported from the components directory and is rendered within a div element in the App component. The Box component displays a waitlist item with a custom design.

The index.css file is also modified to import a new font from Typekit and set the root font family and color.

A new Box component is added in the components directory. The Box component is a functional component that renders a styled div element with a waitlist item.

These changes improve the design and functionality of the application.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url("https://use.typekit.net/zdj1sea.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root {
+    font-family: "tt-commons-pro", sans-serif;
+    color: #ffffff;
+}
